--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,10 @@
 h1{
     text-align: center;
-    color: cornflowerblue;
+    color: #0071BE;
 }
 
 nav {
-    background-color: cornflowerblue;
+    background-color: #0071BE;
     padding: 10px;
 }
 
@@ -28,7 +28,7 @@ nav a:hover {
     text-decoration: none;
 }
 body {
-  background-color: lightblue;
+  background-color: #0071BE;
   text-align: center;
 }
 
